@@ -1,3 +1,8 @@
+2002-07-04  Ross Burton  <ross@burtonini.com>
+
+	* gnotravex.c: When the game is paused, hide the numbers so the
+	player cannot cheat. (closes #85476)
+	
 2002-06-03  Ross Burton  <ross@burtonini.com>
 
 	* gnotravex.c: Load pixmaps from the application path, instead of
